[gd_scene load_steps=7 format=2]

[ext_resource path="res://hg.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Menus/resources/black_btn.tres" type="StyleBox" id=2]
[ext_resource path="res://Menus/HUD/botMenul.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0.666667 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
shadow_size = 6

[sub_resource type="DynamicFont" id=2]
size = 38
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 34
use_filter = true
font_data = ExtResource( 1 )

[node name="BotMenu" type="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -328.0
margin_top = -298.0
margin_right = 328.0
margin_bottom = 298.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="Panel" parent="."]
anchor_right = 1.0
margin_bottom = 65.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Header"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -101.5
margin_top = -28.0
margin_right = 101.5
margin_bottom = 28.0
custom_fonts/font = SubResource( 2 )
text = "Bot Menu"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -237.999
margin_top = -175.676
margin_right = 231.001
margin_bottom = 243.324
custom_constants/separation = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="add_bot" type="Button" parent="VBoxContainer"]
margin_right = 469.0
margin_bottom = 64.0
rect_min_size = Vector2( 390, 64 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "Add Bot"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="add_bot_ct" type="Button" parent="VBoxContainer"]
margin_top = 104.0
margin_right = 469.0
margin_bottom = 168.0
rect_min_size = Vector2( 390, 64 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = SubResource( 3 )
disabled = true
text = "Add Bot CT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="add_bot_t" type="Button" parent="VBoxContainer"]
margin_top = 208.0
margin_right = 469.0
margin_bottom = 272.0
rect_min_size = Vector2( 390, 64 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = SubResource( 3 )
disabled = true
text = "Add Bot T"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back" type="Button" parent="VBoxContainer"]
margin_top = 312.0
margin_right = 469.0
margin_bottom = 376.0
rect_min_size = Vector2( 390, 64 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="VBoxContainer/add_bot" to="." method="_on_add_bot_pressed"]
[connection signal="pressed" from="VBoxContainer/add_bot_ct" to="." method="_on_add_bot_ct_pressed"]
[connection signal="pressed" from="VBoxContainer/add_bot_t" to="." method="_on_add_bot_t_pressed"]
[connection signal="pressed" from="VBoxContainer/back" to="." method="_on_back_pressed"]
